--- a/css/index.css
+++ b/css/index.css
@@ -4,19 +4,27 @@
   box-sizing: border-box;
 }
 
+.oculto {
+  display: none !important;
+}
+
 body {
-  font-family: "Rubik", sans-serif;
+  font-family: "Rowdies";
+
+  font-style: normal;
 }
 
 header {
   width: 100%;
-  padding-top: 2.5%;
-  padding-bottom: 2.5%;
+  padding-top: 2%;
+  padding-bottom: 2%;
   padding-right: 70px;
   display: flex;
   background-color: #000000;
-  color: aliceblue;
+  color: rgb(0, 0, 0);
   justify-content: center;
+  position: fixed;
+  z-index: 100;
 }
 
 nav {
@@ -36,22 +44,39 @@ nav ul li {
 }
 
 nav ul li a {
-  font-size: 2rem;
+  font-size: 1.2rem;
   padding-right: 3rem;
   text-transform: uppercase;
-  color: rgb(148, 6, 117);
+  color: rgb(255, 255, 255);
   text-align: center;
+  font-weight: 1000;
 }
 
-nav ul li:hover {
+.navbar ul li:hover a {
   color: rgb(226, 186, 53);
-  font-weight: 700;
-  text-decoration: underline;
 }
 
 a {
   text-decoration: none;
   color: white;
+}
+
+.logo h1 {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: #000;
+  user-select: none;
+  display: none;
+}
+
+h2 {
+  font-size: 2rem;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
 }
 .baner {
   width: 100%;
@@ -60,27 +85,466 @@ a {
     url(../imagenes/47a990c0fcc3bf2124a160df2c267717.jpg);
   background-repeat: no-repeat;
   background-position: right;
+
   color: aliceblue;
+  background-color: #000000;
+}
+.banerylogo {
+  padding-top: 105px;
   background-color: #000000;
 }
 
 .logo img {
-  display: flex;
   width: 50%;
   height: auto;
-  justify-content: left;
-  align-items: left;
   margin: auto;
   margin-left: 120px;
   padding-top: 90px;
 }
 
-.video {
+.secundario {
   display: flex;
-  width: 80%;
-  height: 500;
+  justify-content: space-evenly; /* Distribuir las imágenes de manera uniforme */
+  flex-wrap: wrap;
+  padding-top: 80px;
+  width: 100%;
+  align-items: center !important;
+  padding-bottom: 80px;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
+    url(../imagenes/fondo.jpg);
+  background-position: initial; /* Esto ajusta la imagen para que se vea más la parte inferior */
+  background-repeat: no-repeat; /* Esto asegura que la imagen no se repita */
+  background-size: cover;
+}
+
+.temporada-container {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.imagen-container {
+  width: 350px;
+  text-align: center;
+  position: relative; /* Contenedor relativo para imágenes */
+  overflow: hidden; /* Ocultar desbordamiento */
+  aspect-ratio: 1 / 1.6; /* Mantener la relación de aspecto cuadrada */
+  box-sizing: border-box;
+  margin-bottom: 16px;
+}
+
+.imagen-container a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.imagen-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 35px;
+  transition: opacity 0.3s ease, transform 0.3s ease; /* Transición de opacidad y transformación suave */
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+.imagen-container img.normal-img {
+  z-index: 1; /* Mostrar imagen normal al frente inicialmente */
+}
+.imagen-container img.hover-img {
+  z-index: 2; /* Mostrar imagen de hover al frente cuando se hace hover */
+  opacity: 0; /* Inicialmente oculto */
+}
+.imagen-container:hover img.normal-img {
+  opacity: 0; /* Ocultar imagen normal al pasar el ratón */
+}
+.imagen-container:hover img.hover-img {
+  opacity: 1; /* Mostrar imagen de hover al pasar el ratón */
+}
+
+h4 {
+  font-size: 1.4rem;
+  color: #ffffff;
+  text-align: center;
+  font-weight: 1000;
+  text-transform: uppercase;
+  margin-top: 16px;
+  padding-bottom: 22px;
+}
+
+.temporada-container p {
+  color: #ffffff;
+  text-align: center;
+  margin-top: 12px;
+  text-transform: uppercase;
+}
+
+.temporadas-descripcion {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  flex-direction: row;
+  margin-top: 50px;
+  margin-bottom: 60px;
+  text-align: left;
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+.descripcion-item {
+  max-width: 425px;
+  margin-top: 40px;
+}
+
+.temporadas-descripcion h5 {
+  font-size: 1.8rem;
+  text-align: left;
+  padding-bottom: 1%;
+  padding-bottom: 2%;
+  color: #000000;
+}
+.temporadas-descripcion p {
+  text-align: left;
+  font-size: 1.2rem;
+  padding-bottom: 2%;
+  color: #000;
+}
+
+.movie-container h3 {
+  font-size: 2rem;
+  color: white;
+  text-transform: uppercase;
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+
+.movie-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
+    url(../imagenes/IMG_copia.JPG);
+  background-position: center; /* Esto ajusta la imagen para que se vea más la parte inferior */
+  background-repeat: no-repeat; /* Esto asegura que la imagen no se repita */
+  background-size: cover;
+  padding-top: 120px;
+  padding-bottom: 180px;
+}
+
+.movie-div {
+  display: flex;
   justify-content: center;
   align-items: center;
-  margin: auto;
-  padding-bottom: 100px;
+  margin-top: 60px;
+}
+
+.movie-div p {
+  width: 35%;
+  margin-left: 48px;
+  color: #ffffff;
+  font-size: 1.3rem;
+}
+
+.footer {
+  width: 100%;
+  background-color: #000000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 22px;
+  padding-bottom: 22px;
+}
+.footer img {
+  max-width: 80px;
+}
+.footer p {
+  color: #ffffff;
+  font-size: 0.8rem;
+  font-weight: 100;
+}
+.botondiv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.botonver {
+  height: 50px;
+  width: 150px;
+  border-radius: 40px;
+  font-size: 1.2rem;
+  font-family: "Rowdies";
+  font-weight: 100;
+  background: none;
+  color: #ffffff;
+  border-color: #ffffff;
+}
+
+.botonver:hover {
+  color: #000000;
+  background-color: rgb(226, 186, 53);
+}
+
+.menu {
+  display: none;
+}
+
+/* P E R S O N A J E S */
+
+.personajes {
+  width: 100%;
+  height: 100vw;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
+    url(../imagenes/fondo.jpg);
+  background-position: initial; /* Esto ajusta la imagen para que se vea más la parte inferior */
+  background-repeat: no-repeat; /* Esto asegura que la imagen no se repita */
+  background-size: cover;
+  padding-top: 160px;
+}
+
+.personajes h1 {
+  font-size: 2rem;
+  text-align: center;
+  color: #ffffff;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.personajes-container {
+  width: 100%;
+  padding-left: 100px;
+  padding-right: 100px;
+  display: flex;
+  justify-content: space-evenly; /* Distribuir las imágenes de manera uniforme */
+  flex-wrap: wrap;
+}
+
+.p-item {
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+  flex-direction: column;
+  border-radius: 35px;
+  box-shadow: 0 0 46px rgba(255, 192, 203, 0.5);
+}
+
+.img-item {
+  width: 350px;
+  height: 560px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box;
+  margin-bottom: 0px;
+  object-fit: cover;
+  border-top-left-radius: 28px;
+  border-top-right-radius: 35px;
+}
+.p-item h5 {
+  text-align: center;
+  margin-top: 26px;
+  color: #ffffff;
+  font-size: 1rem;
+  width: 260px;
+  text-transform: uppercase;
+}
+.p-item p {
+  width: 300px;
+  padding: 16px;
+  color: #ffffff;
+  text-align: center;
+}
+
+/* G A L E R I A */
+
+.h1-galeria {
+  font-size: 2rem;
+  text-align: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  align-items: center;
+  position: absolute;
+  margin-top: -100px;
+}
+
+.galeria {
+  position: relative;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
+    url(../imagenes/fondo.jpg);
+  background-position: initial; /* Esto ajusta la imagen para que se vea más la parte inferior */
+  background-repeat: no-repeat; /* Esto asegura que la imagen no se repita */
+  background-size: cover;
+  width: 100%;
+  padding-left: 100px;
+  padding-right: 100px;
+  display: flex;
+  justify-content: space-evenly; /* Distribuir las imágenes de manera uniforme */
+  flex-wrap: wrap;
+  padding-bottom: 80px;
+  padding-top: 260px;
+}
+
+.galeria div {
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+  flex-direction: column;
+}
+.galeria div a img {
+  width: 250px;
+  height: 360px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  box-sizing: border-box;
+  margin-bottom: 0px;
+  object-fit: cover;
+  box-shadow: 0 0 46px rgba(255, 192, 203, 0.5);
+  border-radius: 25px;
+}
+
+@media (max-width: 1250px) {
+  .galeria {
+    padding-top: 200px;
+    padding-bottom: 20px;
+  }
+  .galeria div {
+    margin-bottom: 30px;
+  }
+  .menu {
+    display: block;
+    background-image: url(../imagenes/menu-icon.png);
+    background-size: cover;
+    height: 40px;
+    width: 40px;
+    z-index: 800;
+    position: fixed;
+    margin-top: 30px;
+    margin-left: 20px;
+  }
+  .baner {
+    margin-bottom: -20px;
+  }
+
+  .menu-abierto {
+    width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
+      url(../imagenes/fondo.jpg);
+    z-index: 300;
+    position: fixed;
+  }
+
+  .divlista {
+    padding-top: 100px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  }
+  .divlista ul {
+    list-style-type: none;
+  }
+
+  .divlista li {
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+
+  .divlista li a {
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    font-family: "Rowdies";
+    padding: 400px;
+  }
+
+  .navbar {
+    display: none;
+  }
+
+  .botondiv {
+    display: flex;
+    align-items: center;
+    margin-top: 580px;
+  }
+
+  .logo {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+  }
+
+  .logo img {
+    margin: 0;
+    padding: 0;
+    margin-top: -70px;
+    margin-right: 30px;
+  }
+
+  .secundario {
+    padding-bottom: -2220px;
+    padding-top: 48px;
+  }
+  .temporada-container {
+    margin-bottom: 40px;
+  }
+  .descripcion-item h5 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .descripcion-item p {
+    font-size: 1rem;
+    text-align: center;
+  }
+  .movie-container {
+    padding-top: 55px;
+    padding-bottom: 65px;
+  }
+
+  .movie-container h3 {
+    font-size: 1.5rem;
+  }
+  .movie-div {
+    flex-direction: column;
+    margin-top: 0;
+  }
+
+  .movie-div iframe {
+    width: 400px;
+    padding-top: 50px;
+  }
+
+  .movie-div p {
+    padding-top: 50px;
+    width: 400px;
+    height: 280px;
+    text-align: center;
+    font-size: 1rem;
+    margin-left: 0;
+  }
+
+  /* PERSONAJES */
+
+  .img-item {
+    width: 325px;
+    height: auto;
+  }
+
+  .personajes-container {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 60px;
+  }
+
+  .p-item {
+    width: 325px;
+  }
+
+  .personajes {
+    height: auto;
+    padding-top: 100px;
+  }
 }
