--- a/css/index.css
+++ b/css/index.css
@@ -286,6 +286,7 @@ h4 {
 .botonver:hover {
   color: #000000;
   background-color: rgb(226, 186, 53);
+  cursor: pointer;
 }
 
 .menu {
@@ -315,18 +316,19 @@ h4 {
 
 .personajes-container {
   width: 100%;
+
   padding-left: 100px;
   padding-right: 100px;
+  padding-bottom: 20px;
   display: flex;
   justify-content: space-evenly; /* Distribuir las imágenes de manera uniforme */
   flex-wrap: wrap;
 }
 
 .p-item {
-  margin-top: 60px;
   display: flex;
   align-items: center;
-  padding-bottom: 20px;
+  margin-top: 55px;
   flex-direction: column;
   border-radius: 35px;
   box-shadow: 0 0 46px rgba(255, 192, 203, 0.5);
@@ -334,7 +336,7 @@ h4 {
 
 .img-item {
   width: 350px;
-  height: 560px;
+  height: 540px;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -354,7 +356,7 @@ h4 {
 }
 .p-item p {
   width: 300px;
-  padding: 16px;
+  padding: 20px;
   color: #ffffff;
   text-align: center;
 }
@@ -368,7 +370,7 @@ h4 {
   text-transform: uppercase;
   align-items: center;
   position: absolute;
-  margin-top: -100px;
+  margin-top: -80px;
 }
 
 .galeria {
@@ -384,19 +386,21 @@ h4 {
   display: flex;
   justify-content: space-evenly; /* Distribuir las imágenes de manera uniforme */
   flex-wrap: wrap;
-  padding-bottom: 80px;
-  padding-top: 260px;
+  padding-bottom: 10px;
+  padding-top: 210px;
 }
 
 .galeria div {
   display: flex;
   align-items: center;
-  padding-bottom: 20px;
+  width: 250px;
+  height: 260px;
   flex-direction: column;
+  padding-bottom: 310px;
 }
 .galeria div a img {
-  width: 250px;
-  height: 360px;
+  width: 200px;
+  height: 260px;
   text-align: center;
   position: relative;
   overflow: hidden;
@@ -404,16 +408,212 @@ h4 {
   margin-bottom: 0px;
   object-fit: cover;
   box-shadow: 0 0 46px rgba(255, 192, 203, 0.5);
-  border-radius: 25px;
+  border-radius: 15px;
+}
+
+/* RESEÑAS */
+
+.resenas-container-divs h1 {
+  width: 100%;
+  text-align: center;
+  padding-top: 150px;
+  padding-bottom: 50px;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+  font-size: 2rem;
+}
+
+.resenas-container-divs {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
+    url(../imagenes/fondo.jpg);
+  background-position: initial; /* Esto ajusta la imagen para que se vea más la parte inferior */
+  background-repeat: no-repeat; /* Esto asegura que la imagen no se repita */
+  background-size: cover;
+}
+
+.resenas-container-divs div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  box-shadow: 0 0 46px rgba(255, 192, 203, 0.5);
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 100px;
+  margin-top: 50px;
+  padding: 60px;
+}
+
+.resenas-container-divs img {
+  width: 250px;
+  padding-bottom: 40px;
+}
+.resenas-container-divs p {
+  width: 400px;
+  color: #ffffff;
+}
+
+/*CONTACTO*/
+.container-total {
+  padding: 210px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: linear-gradient(rgba(0 0 0 /0.6), rgba(0 0 0 / 0.8)),
+    url(../imagenes/contacto.jpg);
+  background-position: center; /* Esto ajusta la imagen para que se vea más la parte inferior */
+  background-repeat: no-repeat; /* Esto asegura que la imagen no se repita */
+  background-size: cover;
+}
+.contacto-container {
+  display: grid;
+  grid-template-columns: repeat(2, 50%);
+  padding: 20px;
+  gap: 10px;
+  width: 1000px;
+}
+.box-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.box-info h1 {
+  padding-top: 20px;
+  font-size: 1.2rem;
+  color: #ffffff;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 15px;
+}
+
+.input-box {
+  position: relative;
+}
+
+.input-box input {
+  width: 100%;
+  height: 50px;
+  padding: 0 10px;
+  outline: none;
+  background: rgba(0, 0, 0, 0.1);
+  border: 15px solid transparent;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  color: #ffffff;
+  border-radius: 26px;
+}
+
+.input-box input:focus,
+.input-box textarea:focus {
+  border-bottom: 3px solid #814da4;
+  animation: shake 0.2s;
+}
+
+.input-box input::placeholder,
+.input-box textarea::placeholder {
+  color: #fff;
+}
+
+.input-box input:focus::placeholder,
+.input-box textarea:focus::placeholder {
+  color: transparent;
+}
+
+.input-box textarea {
+  width: 100%;
+  height: 130px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 15px solid transparent;
+  letter-spacing: 1px;
+  transition: 0.3s;
+  color: #fff;
+  border-radius: 20px;
+}
+form button {
+  background: #fff;
+  color: #000000;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 10px;
+  border-radius: 26px;
+  transition: 0.2s;
+}
+.box-info img {
+  width: 450px;
+}
+form button:hover {
+  background: #814da4;
+}
+
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-10px);
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(10px);
+  }
 }
 
 @media (max-width: 1250px) {
+  /*CONTACTO*/
+  .contacto-container {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+  }
+  .box-info {
+    gap: 15px;
+  }
+
+  /* resenas*/
+  .resenas-container-divs h1 {
+    padding-top: 100px;
+    padding-bottom: 10px;
+  }
+
+  .resenas-container-divs {
+    padding-bottom: 60px;
+  }
+  .resenas-container-divs div {
+    width: 80%;
+    margin-bottom: 30px;
+  }
+  .resenas-container-divs div p {
+    width: 200px;
+    text-align: center;
+  }
+
   .galeria {
     padding-top: 200px;
     padding-bottom: 20px;
   }
   .galeria div {
-    margin-bottom: 30px;
+    margin-bottom: 0;
   }
   .menu {
     display: block;
@@ -432,8 +632,7 @@ h4 {
 
   .menu-abierto {
     width: 100%;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4)),
-      url(../imagenes/fondo.jpg);
+    background-color: #000000;
     z-index: 300;
     position: fixed;
   }
@@ -445,20 +644,20 @@ h4 {
     justify-content: center;
     text-align: center;
   }
+
   .divlista ul {
     list-style-type: none;
   }
 
   .divlista li {
-    margin-top: 12px;
-    margin-bottom: 12px;
+    margin-top: 22px;
+    margin-bottom: 22px;
   }
 
   .divlista li a {
     font-size: 1.5rem;
     text-transform: uppercase;
     font-family: "Rowdies";
-    padding: 400px;
   }
 
   .navbar {
@@ -536,7 +735,7 @@ h4 {
   .personajes-container {
     padding-left: 30px;
     padding-right: 30px;
-    padding-bottom: 60px;
+    padding-bottom: 80px;
   }
 
   .p-item {
@@ -546,5 +745,25 @@ h4 {
   .personajes {
     height: auto;
     padding-top: 100px;
+  }
+
+  /* CONTACTO */
+  .container-total {
+    padding: 0;
+    padding-bottom: 60px;
+  }
+
+  .box-info {
+    align-items: center;
+    margin-top: 100px;
+  }
+
+  .box-info h1 {
+    margin-top: 12px;
+    margin-bottom: 12px;
+  }
+
+  .box-info img {
+    width: 250px;
   }
 }
